--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello!</h1>
     <h4>I am Alison Brown and this is my page. :-)</h4>
-   <img src=""
+   <img src="duck.jpg" width=300 alt="Alison and duck photography" img>
 </body>
 </html>
