--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <h1>Hello!</h1>
     <h4>I am Alison Brown and this is my page. :-)</h4>
-   <img src="duck.jpg" width=300 alt="Alison and duck photography" img>
+    <p>
+        <ul>
+            <li>20</li>
+            <li>Illustrator</li>
+            <li>Nature enthusiast</li>
+        </ul>
+    </p>
+</img src="duck.jpg" width=300 alt="Alison and duck photography" img>
 </body>
 </html>
