--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <li>Nature enthusiast</li>
         </ul>
     </p>
-</img src="duck.jpg" width=300 alt="Alison and duck photography" img>
+<img src="duck.jpg" width=300 alt="Alison and duck photography" img> <img src="artwork.jpg" alt="creepy cat banjo artwork" img>
 </body>
 </html>
