--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <li>Nature enthusiast</li>
         </ul>
     </p>
-<img src="images/duck.jpg" width=50% alt="Alison and duck photography" img> <img src="images/artwork.jpg" width=50% alt="creepy cat banjo artwork" img>
+<img src="images/duck.jpg" width=300 alt="Alison and duck photography" img> <img src="images/artwork.jpg" width=300 alt="creepy cat banjo artwork" img>
+<p>
+    These are my best friends!
+</p>
+<img src="images/friends.jpg" alt="Alison and friends photography">
 </body>
 </html>
