--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
             <li>Nature enthusiast</li>
         </ul>
     </p>
-<img src="images/duck.jpg" width=300 alt="Alison and duck photography" img> <img src="images/artwork.jpg" width=300 alt="creepy cat banjo artwork" img>
-<p>
-    These are my best friends!
-</p>
+<img src="images/duck.jpg" height=500 alt="Alison and duck photography" img> <img src="images/artwork.jpg" height=500 alt="creepy cat banjo artwork" img>
+<p>A photo of me as well as one of my work!</p>
 <img src="images/friends.jpg" alt="Alison and friends photography">
+<p>These are my best friends!</p>
 </body>
 </html>
