--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
 <img src="images/duck.jpg" height=500 alt="Alison and duck photography" img> <img src="images/artwork.jpg" height=500 alt="creepy cat banjo artwork" img>
 <p>A photo of me as well as one of my work!</p>
-<img src="images/friends.jpg" alt="Alison and friends photography">
+<img src="images/friends.jpg" width="500" alt="Alison and friends photography">
 <p>These are my best friends!</p>
 </body>
 </html>
