--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Exercise 1</title>
     <link rel="stylesheet" href="styles/style1.css">
 </head>
-<body>
+<body style="styles/style1.css">
     <h1>Hello!</h1>
     <h4>I am Alison Brown and this is my page. :-)</h4>
     <p>
