styles and divs

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 1</title>
-    <link rel="stylesheet" href="styles/style1.css">
 </head>
-<body style="styles/style1.css">
+<body>
     <h1>Hello!</h1>
     <h4>I am Alison Brown and this is my page. :-)</h4>
     <p>
