--- a/exercise-2.html
+++ b/exercise-2.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
-    <link rel="stylesheet" href="styles/style1.css">
+    <style>
+        body{
+            margin: 0;
+        }
+        .container {
+            position: relative;
+            width: 620px;
+            height: 620px;
+            border: 10px solid #ccc;
+            margin: auto;
+        }
+        .container div { 
+            width: 200px;
+            height: 200px;}
+        .box1 {
+            background-color: red;
+            position: absolute;
+            top: 100px;
+            left: 100px;
+        }
+        .box2 {
+            background-color: rgb(38, 0, 255);
+            position: absolute;
+            top: 210px;
+            left: 210px;
+        }
+        .box3 {
+            background-color: rgb(0, 255, 0);
+            position: absolute;
+            bottom: 100px;
+            right: 100px;
+        }
+    </style>
 </head>
 <body>
-<div class="box1"></div>
-<div class="box2"></div>
-<div class="box3"></div>
+    <div class="container">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+    </div>
 </body>
 </html>
