--- a/exercise-3.html
+++ b/exercise-3.html
@@ -26,9 +26,13 @@
     }
     .container1 {
         background-color: #676767;
+        width: 1400px;
+        margin: auto;
     }
     .container2 {
         background-color: #ffffff;
+        width: 1400px;
+        margin: auto;
     }
     .col33A {
         position: relative;
