--- a/exercise-3.html
+++ b/exercise-3.html
@@ -26,12 +26,12 @@
     }
     .container1 {
         background-color: #676767;
-        width: 1400px;
+        width: 1440px;
         margin: auto;
     }
     .container2 {
         background-color: #ffffff;
-        width: 1400px;
+        width: 1440px;
         margin: auto;
     }
     .col33A {
@@ -57,6 +57,11 @@
         bottom: 0px;
         margin: 0
     }
+    footer {
+        background-color: #000000;
+        height: 500px;
+        margin: auto;
+    }
     /*Utility class*/
     .flex {
         display: flex;
@@ -78,7 +83,6 @@
             <div class="button"></div>
         </div>
     </div>
-
     <div class="container2 flex">
         <div class="col33B">
             <div class="button"></div>
@@ -90,5 +94,6 @@
             <div class="button"></div>
         </div>
     </div>
+    <footer></footer>
 </body>
 </html>
