--- a/exercise-3.html
+++ b/exercise-3.html
@@ -19,13 +19,19 @@
     .banner2 {
         background-color: #ffffff;
         height: 400px;
+        margin: auto;
+        justify-content: center;
     }
     .banner3 {
         background-color: #000000;
-        height: 100px;
+        height: 200px;
+    }
+    .banner4 { 
+        background-color: #ffffff;
+        height: 200px;
     }
     .container1 {
-        background-color: #676767;
+        background-color: #c4c4c4;
         width: 1440px;
         margin: auto;
     }
@@ -36,26 +42,49 @@
     }
     .col33A {
         position: relative;
-        background-color: #ffffff;
+        background-color: #c4c4c4;
         width: 33%;
-        height: 600px;
+        height: 750px;
         margin: 40px;
     }
     .col33B {
         position: relative;
         background-color: #ffffff;
-        border: 2px solid #676767;
         width: 33%;
-        height: 600px;
+        height: 750px;
         margin: 40px;
     }
     .button {
         background-color: #000000;
         width: 100%;
         height: 100px;
-        position:absolute;
+        position: absolute;
         bottom: 0px;
-        margin: 0
+        margin: auto;
+    }
+    h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 96pt;
+        color: #ffffff;
+        margin: auto;
+        text-align: center;
+        line-height: 200px;
+    }
+    h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 40pt;
+        color: #000000;
+        margin: auto;
+        text-align: center;
+        line-height: 200px;
+    }
+    h4 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 36pt;
+        color: #ffffff;
+        margin: auto;
+        text-align: center;
+        line-height: 100px;
     }
     footer {
         background-color: #000000;
@@ -70,28 +99,35 @@
 </head>
 <body>
     <div class="banner1"></div>
-    <div class="banner2"></div>
-    <div class="banner3"></div>
+    <div class="banner2 flex"><img src="https://placehold.co/1440x400" alt="placeholder"></div>
+    <div class="banner3 flex"><h1>Explore Central PA</h1></div>
+    <div class="banner4 flex"><h2>Featured Destinations</h2></div>
     <div class="container1 flex">
         <div class="col33A">
-            <div class="button"></div>
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
-            <div class="button"></div>
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
-            <div class="button"></div>
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <div class="button"><h4>EXPLORE</h4></div>
         </div>
     </div>
     <div class="container2 flex">
         <div class="col33B">
-            <div class="button"></div>
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33B">
-            <div class="button"></div>
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33B">
-            <div class="button"></div>
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <div class="button"><h4>EXPLORE</h4></div>
         </div>
     </div>
     <footer></footer>
