--- a/exercise-3.html
+++ b/exercise-3.html
@@ -86,6 +86,22 @@
         text-align: center;
         line-height: 100px;
     }
+    h6 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 24pt;
+        color: #000000;
+        margin: auto;
+        text-align: left;
+        padding-top: 10px;
+    }
+    p {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 16pt;
+        color: #000000;
+        margin: auto;
+        text-align: left;
+        padding-top: 10px;
+    }
     footer {
         background-color: #000000;
         height: 500px;
@@ -105,28 +121,81 @@
     <div class="container1 flex">
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Railroad Museum of Pennsylvania</h6>
+            <p>A charming small town known for its historic downtown, offering boutique shops, galleries, and restaurants, as well as attractions like the Lewisburg Farmers Market and Packwood House Museum.</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
     </div>
     <div class="container2 flex">
         <div class="col33B">
             <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33B">
             <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33B">
             <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
+            <div class="button"><h4>EXPLORE</h4></div>
+        </div>
+    </div>
+
+    <div class="container1 flex">
+        <div class="col33A">
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Railroad Museum of Pennsylvania</h6>
+            <p>A charming small town known for its historic downtown, offering boutique shops, galleries, and restaurants, as well as attractions like the Lewisburg Farmers Market and Packwood House Museum.</p>
+            <div class="button"><h4>EXPLORE</h4></div>
+        </div>
+        <div class="col33A">
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
+            <div class="button"><h4>EXPLORE</h4></div>
+        </div>
+        <div class="col33A">
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
+            <div class="button"><h4>EXPLORE</h4></div>
+        </div>
+    </div>
+    <div class="container2 flex">
+        <div class="col33B">
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
+            <div class="button"><h4>EXPLORE</h4></div>
+        </div>
+        <div class="col33B">
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
+            <div class="button"><h4>EXPLORE</h4></div>
+        </div>
+        <div class="col33B">
+            <img src="https://placehold.co/400x400" alt="placeholder">
+            <h6>Text</h6>
+            <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
     </div>
