--- a/exercise-3.html
+++ b/exercise-3.html
@@ -102,6 +102,10 @@
         text-align: left;
         padding-top: 10px;
     }
+    .banner5 { 
+        background-color: #c4c4c4;
+        height: 200px;
+    }
     footer {
         background-color: #000000;
         height: 500px;
@@ -199,6 +203,7 @@
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
     </div>
+    <div class="banner5"></div>
     <footer></footer>
 </body>
 </html>
