--- a/microsite/index.html
+++ b/microsite/index.html
@@ -2,6 +2,9 @@
     <meta charset="UTF-8">
     <title>Poker</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-icon.png">
   </head>
   <body>
     <div class="navigation">
@@ -9,6 +12,7 @@
             <a class="current" href="index.html">About</a>
             <a href="page-2.html">How to Play Texas Hold'em</a>
             <a href="page-3.html">Popular Poker Variants</a>
+            <a href="404.html">404 Test</a>
         </nav>
     </div>
     <h1>Welcome to the World of Poker</h1>
@@ -58,6 +62,6 @@
       <li>Social interaction and camaraderie.</li>
     </ul>
     <p><strong>Next Page: How to Play Texas Hold'em</strong></p>
-    <img src="images/poker.jpg" alt="Poker">
+    <img src="../images/Poker.jpg" class="poker" alt="Poker">
 </body>
 </html>
