--- a/microsite/index.html
+++ b/microsite/index.html
@@ -63,6 +63,6 @@
       <li>Social interaction and camaraderie.</li>
     </ul>
     <p><strong>Next Page: How to Play Texas Hold'em</strong></p>
-    <img src="../images/Poker.jpg" class="poker" alt="Poker">
+    <img src="/images/Poker.jpg" class="poker" alt="Poker">
 </body>
 </html>
