--- a/projects/pa-tourism/final.html
+++ b/projects/pa-tourism/final.html
@@ -16,45 +16,45 @@
         margin: 0;
     }
     .banner1 {
-        background-color: #000000;
+        background-color: #232E28;
         height: 120px;
     }
     .banner2 {
-        background-color: #5b5b5b;
+        background-color: #403C3A;
         height: 200px;
         margin: auto;
         justify-content: center;
     }
     .banner3 {
-        background-color: #000000;
+        background-color: #8B9C93;
         height: 20px;
     }
     .container1 {
-        background-color: #4599b2;
+        background-color: #B7CCBC;
         width: 1440px;
         margin: auto;
     }
     .container2 {
-        background-color: #c94a4a;
+        background-color: #8B9C93;
         width: 1440px;
         margin: auto;
     }
     .col33A {
         position: relative;
-        background-color: #c4c4c4;
+        background-color: #B7CCBC;
         width: 33%;
         height: 750px;
         margin: 40px;
     }
     .col33B {
         position: relative;
-        background-color: #ffffff;
+        background-color: #8B9C93;
         width: 33%;
         height: 750px;
         margin: 40px;
     }
     .button {
-        background-color: #c568da;
+        background-color: #232E28;
         width: 100%;
         height: 70px;
         position: absolute;
@@ -80,7 +80,7 @@
     }
     h6 {
         font-size: 24pt;
-        color: #000000;
+        color: #A11B1A;
         margin: auto;
         text-align: left;
         padding-top: 10px;
@@ -94,11 +94,11 @@
         padding-top: 10px;
     }
     .banner5 { 
-        background-color: #c4c4c4;
+        background-color: #8B9C93;
         height: 50px;
     }
     footer {
-        background-color: #000000;
+        background-color: #403C3A;
         height: 400px;
         margin: auto;
     }
