--- a/projects/pa-tourism/final.html
+++ b/projects/pa-tourism/final.html
@@ -116,19 +116,19 @@
     <div class="container1 flex">
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Railroad Museum of Pennsylvania</h6>
-            <p>A charming small town known for its historic downtown, offering boutique shops, galleries, and restaurants, as well as attractions like the Lewisburg Farmers Market and Packwood House Museum.</p>
+            <h6>The Pennsylvania Grand Canyon</h6>
+            <p>Also known as Pine Creek Gorge, this natural wonder features stunning vistas, hiking trails, and opportunities for outdoor recreation.</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
-            <p>Text</p>
+            <h6>Hersheypark</h6>
+            <p>A renowned amusement park featuring exciting rides, live entertainment, and an opportunity to learn about chocolate-making at Hershey's Chocolate World.</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
+            <h6>Gettysburg National Military Park</h6>
             <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
@@ -136,19 +136,19 @@
     <div class="container2 flex">
         <div class="col33B">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
+            <h6>Pennsylvania State Capitol</h6>
             <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33B">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
+            <h6>Raystown Lake</h6>
             <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33B">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
+            <h6>Railroad Museum of Pennsylvania</h6>
             <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
@@ -157,24 +157,23 @@
     <div class="container1 flex">
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Railroad Museum of Pennsylvania</h6>
-            <p>A charming small town known for its historic downtown, offering boutique shops, galleries, and restaurants, as well as attractions like the Lewisburg Farmers Market and Packwood House Museum.</p>
+            <h6>Central Market York</h6>
+            <p>Text.</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
+            <h6>Pine Grove Furnace State Park</h6>
             <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
         <div class="col33A">
             <img src="https://placehold.co/400x400" alt="placeholder">
-            <h6>Text</h6>
+            <h6>Worlds End State Park</h6>
             <p>Text</p>
             <div class="button"><h4>EXPLORE</h4></div>
         </div>
     </div>
-
     </div>
     <div class="banner5"></div>
     <footer></footer>
