working on final

--- a/projects/pa-tourism/final.html
+++ b/projects/pa-tourism/final.html
@@ -15,15 +15,34 @@
         background-color: #ffffff;
         margin: 0;
     }
+    .mocknav1 {
+        padding-left: 20px;
+        width: 1440px;
+        margin: auto;
+        justify-content: right;
+    }
+    .mocknav2 {
+        font-family: "Libre Caslon Text", serif;
+        font-size: 16pt;
+        color: #8B9C93;
+        list-style-type: none;
+        margin: 0;
+        padding-top: 40px;
+        padding-bottom: 10px;
+    }
+    .mocknav2 li {
+        display: inline;
+        padding-left: 30px;
+    }
     .banner1 {
         background-color: #232E28;
-        height: 120px;
     }
     .banner2 {
         background-color: #403C3A;
         height: 200px;
         margin: auto;
         justify-content: center;
+        white-space: nowrap;
     }
     .banner3 {
         background-color: #8B9C93;
@@ -53,13 +72,22 @@
         height: 750px;
         margin: 40px;
     }
-    .button {
+    button {
         background-color: #232E28;
         width: 100%;
         height: 70px;
         position: absolute;
         bottom: 0px;
         margin: auto;
+        cursor: pointer;
+    }
+    button:hover{
+        background-color: #232e285d;
+        border-style: none;
+    }
+    button:active{
+        background-color: #232E28;
+        border-style: none;
     }
     h1, h4, h6 {
         font-family: "Jockey One", sans-serif;
@@ -73,7 +101,7 @@
     }
     h4 {
         font-size: 24pt;
-        color: #ffffff;
+        color: #8B9C93;
         margin: auto;
         text-align: center;
         line-height: 70px;
@@ -91,92 +119,133 @@
         color: #000000;
         margin: auto;
         text-align: left;
-        padding-top: 10px;
+        padding-top: 20px;
     }
     .banner5 { 
         background-color: #8B9C93;
         height: 50px;
     }
-    footer {
+    .banner6 {
         background-color: #403C3A;
-        height: 400px;
+        margin: 0;
+    }
+    .container3 {
         margin: auto;
+        width: 1440px;
+        justify-content: left;
     }
-    /*Utility class*/
-    .flex {
-        display: flex;
+    .attribution {
+        font-family: "Libre Caslon Text", serif;
+        font-size: 16pt;
+        color: #8B9C93;
+        list-style-type: none; 
     }
+a:link {
+  color: #8B9C93;
+}
+a:visited {
+  color: #8B9C93;
+}
+a:hover {
+  color: #ffffff;
+}
+a:active {
+  color: #ffffff;
+}
+ /*Utility class*/
+.flex {
+    display: flex;
+}
 </style>
 </head>
 <body>
     <div class="pagecontainer">
-        <div class="banner1"></div>
+        <div class="banner1 flex">
+        <div class="mocknav1 flex">
+            <ul class="mocknav2">
+                <li><b>About</b></li><li><b>Booking</b></li><li><b>Contact</b></li>
+            </ul>
+        </div>
+        </div>
     <div class="banner2 flex"><h1>Explore Central PA</h1></div>
     <div class="banner3 flex"></div>
     <div class="container1 flex">
         <div class="col33A">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img1.webp" alt="The Pennsylvania Grand Canyon">
             <h6>The Pennsylvania Grand Canyon</h6>
             <p>Also known as Pine Creek Gorge, this natural wonder features stunning vistas, hiking trails, and opportunities for outdoor recreation.</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/ColtonPointStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img2.webp" alt="Hersheypark">
             <h6>Hersheypark</h6>
             <p>A renowned amusement park featuring exciting rides, live entertainment, and an opportunity to learn about chocolate-making at Hershey's Chocolate World.</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <a href= "https://www.hersheypark.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img3.webp" alt="Gettysburg National Military Park">
             <h6>Gettysburg National Military Park</h6>
-            <p>Text</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>Site of the pivotal Battle of Gettysburg during the Civil War, offering guided tours, historic monuments, and a visitor center with exhibits.</p>
+            <a href= "https://www.nps.gov/gett/index.htm" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
     </div>
     <div class="container2 flex">
         <div class="col33B">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img4.webp" alt="Pennsylvania State Capitol">
             <h6>Pennsylvania State Capitol</h6>
-            <p>Text</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>An impressive architectural gem in Harrisburg showcasing exquisite artwork, stunning interiors, and guided tours to learn about the state's government and history.</p>
+            <a href= "http://www.pacapitol.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33B">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img5.webp" alt="Raystown Lake">
             <h6>Raystown Lake</h6>
-            <p>Text</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>A scenic reservoir near Huntingdon, offering boating, fishing, hiking, and camping amid picturesque landscapes and water activities.</p>
+            <a href= "https://www.nab.usace.army.mil/Missions/Dams-Recreation/Raystown/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33B">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img6.webp" alt="Railroad Museum of Pennsylvania">
             <h6>Railroad Museum of Pennsylvania</h6>
-            <p>Text</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>Located in Strasburg, this museum boasts an extensive collection of vintage locomotives, rail cars, and exhibits, showcasing the rich history of railroading.</p>
+            <a href= "https://www.rrmuseumpa.org/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
     </div>
 
     <div class="container1 flex">
         <div class="col33A">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img7.webp" alt="Central Market York">
             <h6>Central Market York</h6>
-            <p>Text.</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>The oldest continuously operating farmers' market in the U.S., offering a bustling atmosphere, local produce, crafts, and diverse food vendors.</p>
+            <a href= "https://www.centralmarketyork.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img8.webp" alt="Pine Grove Furnace State Park">
             <h6>Pine Grove Furnace State Park</h6>
-            <p>Text</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>Serving as the "Gateway to the Appalachian Trail," this park offers hiking, picnicking, and swimming opportunities, along with historic features and natural beauty.</p>
+            <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/PineGroveFurnaceStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
-            <img src="https://placehold.co/400x400" alt="placeholder">
+            <img src="images/img9.webp" alt="Worlds End State Park">
             <h6>Worlds End State Park</h6>
-            <p>Text</p>
-            <div class="button"><h4>EXPLORE</h4></div>
+            <p>Situated in the Endless Mountains, this park is known for its rugged beauty, with hiking trails, waterfalls, and breathtaking views of the Loyalsock Creek Gorge.</p>
+            <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/WorldsEndStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
     </div>
     </div>
     <div class="banner5"></div>
-    <footer></footer>
+    <div class="banner6">
+        <div class="container3 flex">
+            <ul class="attribution">
+            <li>Attribution:</li>
+            <li>[1] <a href="https://commons.wikimedia.org/wiki/File:PA-grandcanyon-autumn.JPG">Snottywong</a> <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> via Wikimedia Commons</li>
+            <li>[2] <a href="https://flic.kr/p/cG4R1m">Image by Ron Cogswell on July 28, 2012.<a href="https://creativecommons.org/licenses/by/2.0/”>CC BY 2.0</a></li>
+            <li>[3] <a href="https://commons.wikimedia.org/wiki/File:Pennsylvania_State_Capitol_east_side_April_2022.jpeg">Dough4872</a> <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a> via Wikimedia Commons</li>
+            <li>[4] <a href=”https://www.flickr.com/photos/dougtone/11496504455”>Image by Doug Kerr on November 23, 2013.</a> <a href="https://creativecommons.org/licenses/by-sa/2.0/”>CC BY-SA 4.0</a></li>
+            <li>[5] <a href=”https://www.flickr.com/photos/billy_wilson/52550422493”>Image by Billy Wilson on October 5, 2022.</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/”>CC BY-NC 2.0</a></li>
+            <li>[6] <a href="https://commons.wikimedia.org/wiki/File:PGFSP_Furnace.jpg">Mark Larson from Atlanta, GA</a> <a href="https://creativecommons.org/licenses/by-sa/2.0">CC BY-SA 2.0</a> via Wikimedia Commons</li>
+            <li>[7] <a href="https://commons.wikimedia.org/wiki/File:Worlds_End_State_Park_Far_View.jpg">Nicholas</a> <a href="https://creativecommons.org/licenses/by/2.0">CC BY 2.0</a> via Wikimedia Commons</li>
+            </ul>
+        </div>
+    </div>
     </div>
 </body>
 </html>
