--- a/projects/pa-tourism/final.html
+++ b/projects/pa-tourism/final.html
@@ -173,7 +173,7 @@ a:active {
         <div class="col33A">
             <img src="images/img1.webp" alt="The Pennsylvania Grand Canyon">
             <h6>The Pennsylvania Grand Canyon</h6>
-            <p>Also known as Pine Creek Gorge, this natural wonder features stunning vistas, hiking trails, and opportunities for outdoor recreation.</p>
+            <p>Also known as Pine Creek Gorge, this natural wonder features stunning vistas, hiking trails, and opportunities for outdoor recreation. [1]</p>
             <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/ColtonPointStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
@@ -185,7 +185,7 @@ a:active {
         <div class="col33A">
             <img src="images/img3.webp" alt="Gettysburg National Military Park">
             <h6>Gettysburg National Military Park</h6>
-            <p>Site of the pivotal Battle of Gettysburg during the Civil War, offering guided tours, historic monuments, and a visitor center with exhibits.</p>
+            <p>Site of the pivotal Battle of Gettysburg during the Civil War, offering guided tours, historic monuments, and a visitor center with exhibits. [2]</p>
             <a href= "https://www.nps.gov/gett/index.htm" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
     </div>
@@ -193,7 +193,7 @@ a:active {
         <div class="col33B">
             <img src="images/img4.webp" alt="Pennsylvania State Capitol">
             <h6>Pennsylvania State Capitol</h6>
-            <p>An impressive architectural gem in Harrisburg showcasing exquisite artwork, stunning interiors, and guided tours to learn about the state's government and history.</p>
+            <p>An impressive architectural gem in Harrisburg showcasing exquisite artwork, stunning interiors, and guided tours to learn about the state's government and history. [3]</p>
             <a href= "http://www.pacapitol.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33B">
@@ -205,7 +205,7 @@ a:active {
         <div class="col33B">
             <img src="images/img6.webp" alt="Railroad Museum of Pennsylvania">
             <h6>Railroad Museum of Pennsylvania</h6>
-            <p>Located in Strasburg, this museum boasts an extensive collection of vintage locomotives, rail cars, and exhibits, showcasing the rich history of railroading.</p>
+            <p>Located in Strasburg, this museum boasts an extensive collection of vintage locomotives, rail cars, and exhibits, showcasing the rich history of railroading. [4]</p>
             <a href= "https://www.rrmuseumpa.org/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
     </div>
@@ -214,19 +214,19 @@ a:active {
         <div class="col33A">
             <img src="images/img7.webp" alt="Central Market York">
             <h6>Central Market York</h6>
-            <p>The oldest continuously operating farmers' market in the U.S., offering a bustling atmosphere, local produce, crafts, and diverse food vendors.</p>
+            <p>The oldest continuously operating farmers' market in the U.S., offering a bustling atmosphere, local produce, crafts, and diverse food vendors. [5]</p>
             <a href= "https://www.centralmarketyork.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
             <img src="images/img8.webp" alt="Pine Grove Furnace State Park">
             <h6>Pine Grove Furnace State Park</h6>
-            <p>Serving as the "Gateway to the Appalachian Trail," this park offers hiking, picnicking, and swimming opportunities, along with historic features and natural beauty.</p>
+            <p>Serving as the "Gateway to the Appalachian Trail," this park offers hiking, picnicking, and swimming opportunities, along with historic features and natural beauty. [6]</p>
             <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/PineGroveFurnaceStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
         <div class="col33A">
             <img src="images/img9.webp" alt="Worlds End State Park">
             <h6>Worlds End State Park</h6>
-            <p>Situated in the Endless Mountains, this park is known for its rugged beauty, with hiking trails, waterfalls, and breathtaking views of the Loyalsock Creek Gorge.</p>
+            <p>Situated in the Endless Mountains, this park is known for its rugged beauty, with hiking trails, waterfalls, and breathtaking views of the Loyalsock Creek Gorge. [7]</p>
             <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/WorldsEndStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
         </div>
     </div>
@@ -238,7 +238,7 @@ a:active {
             <li>Attribution:</li>
             <li>[1] <a href="https://commons.wikimedia.org/wiki/File:PA-grandcanyon-autumn.JPG">Snottywong</a> <a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> via Wikimedia Commons</li>
             <li>[2] <a href="https://flic.kr/p/cG4R1m">Image by Ron Cogswell on July 28, 2012.<a href="https://creativecommons.org/licenses/by/2.0/”>CC BY 2.0</a></li>
-            <li>[3] <a href="https://commons.wikimedia.org/wiki/File:Pennsylvania_State_Capitol_east_side_April_2022.jpeg">Dough4872</a> <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a> via Wikimedia Commons</li>
+            <li>[3] <a href="https://commons.wikimedia.org/wiki/File:Pennsylvania_State_Capitol_east_side_April_2022.jpeg">Dough4872 <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a> via Wikimedia Commons</li>
             <li>[4] <a href=”https://www.flickr.com/photos/dougtone/11496504455”>Image by Doug Kerr on November 23, 2013.</a> <a href="https://creativecommons.org/licenses/by-sa/2.0/”>CC BY-SA 4.0</a></li>
             <li>[5] <a href=”https://www.flickr.com/photos/billy_wilson/52550422493”>Image by Billy Wilson on October 5, 2022.</a> <a href="https://creativecommons.org/licenses/by-nc/2.0/”>CC BY-NC 2.0</a></li>
             <li>[6] <a href="https://commons.wikimedia.org/wiki/File:PGFSP_Furnace.jpg">Mark Larson from Atlanta, GA</a> <a href="https://creativecommons.org/licenses/by-sa/2.0">CC BY-SA 2.0</a> via Wikimedia Commons</li>
