--- a/projects/pa-tourism/final.html
+++ b/projects/pa-tourism/final.html
@@ -75,24 +75,30 @@
         height: 750px;
         margin: 40px;
     }
-    button {
+    .explore {
         background-color: #232E28;
         width: 100%;
         height: 70px;
         position: absolute;
         bottom: 0px;
-        margin: auto;
         cursor: pointer;
-    }
-    button:hover{
-        background-color: #232e285d;
         border-style: none;
+        text-decoration: none;
+        font-size: 24pt;
+        color: #8B9C93;
+        text-align: center;
+        vertical-align: center;
+        line-height: 70px;
     }
-    button:active{
-        background-color: #232E28;
+    .explore:hover{
         border-style: none;
+        text-decoration: none;
     }
-    h1, h4, h6 {
+    .explore:active{
+        border-style: none;
+        text-decoration: none;
+    }
+    h1, .explore, h6 {
         font-family: "Jockey One", sans-serif;
     }
     h1 {
@@ -101,13 +107,6 @@
         margin: auto;
         text-align: center;
         line-height: 200px;
-    }
-    h4 {
-        font-size: 24pt;
-        color: #8B9C93;
-        margin: auto;
-        text-align: center;
-        line-height: 70px;
     }
     h6 {
         font-size: 24pt;
@@ -177,19 +176,19 @@ a:active {
             <img src="images/img1.webp" alt="The Pennsylvania Grand Canyon">
             <h6>The Pennsylvania Grand Canyon</h6>
             <p>Also known as Pine Creek Gorge, this natural wonder features stunning vistas, hiking trails, and opportunities for outdoor recreation. [1]</p>
-            <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/ColtonPointStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/ColtonPointStatePark/Pages/default.aspx" target="blank">EXPLORE</a>
         </div>
         <div class="col33A">
             <img src="images/img2.webp" alt="Hersheypark">
             <h6>Hersheypark</h6>
             <p>A renowned amusement park featuring exciting rides, live entertainment, and an opportunity to learn about chocolate-making at Hershey's Chocolate World.</p>
-            <a href= "https://www.hersheypark.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.hersheypark.com/" target="blank">EXPLORE</a>
         </div>
         <div class="col33A">
             <img src="images/img3.webp" alt="Gettysburg National Military Park">
             <h6>Gettysburg National Military Park</h6>
             <p>Site of the pivotal Battle of Gettysburg during the Civil War, offering guided tours, historic monuments, and a visitor center with exhibits. [2]</p>
-            <a href= "https://www.nps.gov/gett/index.htm" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.nps.gov/gett/index.htm" target="blank">EXPLORE</a>
         </div>
     </div>
     <div class="container2 flex">
@@ -197,19 +196,19 @@ a:active {
             <img src="images/img4.webp" alt="Pennsylvania State Capitol">
             <h6>Pennsylvania State Capitol</h6>
             <p>An impressive architectural gem in Harrisburg showcasing exquisite artwork, stunning interiors, and guided tours to learn about the state's government and history. [3]</p>
-            <a href= "http://www.pacapitol.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "http://www.pacapitol.com/" target="blank">EXPLORE</a>
         </div>
         <div class="col33B">
             <img src="images/img5.webp" alt="Raystown Lake">
             <h6>Raystown Lake</h6>
             <p>A scenic reservoir near Huntingdon, offering boating, fishing, hiking, and camping amid picturesque landscapes and water activities.</p>
-            <a href= "https://www.nab.usace.army.mil/Missions/Dams-Recreation/Raystown/" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.nab.usace.army.mil/Missions/Dams-Recreation/Raystown/" target="blank">EXPLORE</a>
         </div>
         <div class="col33B">
             <img src="images/img6.webp" alt="Railroad Museum of Pennsylvania">
             <h6>Railroad Museum of Pennsylvania</h6>
             <p>Located in Strasburg, this museum boasts an extensive collection of vintage locomotives, rail cars, and exhibits, showcasing the rich history of railroading. [4]</p>
-            <a href= "https://www.rrmuseumpa.org/" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.rrmuseumpa.org/" target="blank">EXPLORE</a>
         </div>
     </div>
 
@@ -218,19 +217,19 @@ a:active {
             <img src="images/img7.webp" alt="Central Market York">
             <h6>Central Market York</h6>
             <p>The oldest continuously operating farmers' market in the U.S., offering a bustling atmosphere, local produce, crafts, and diverse food vendors. [5]</p>
-            <a href= "https://www.centralmarketyork.com/" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.centralmarketyork.com/" target="blank">EXPLORE</a>
         </div>
         <div class="col33A">
             <img src="images/img8.webp" alt="Pine Grove Furnace State Park">
             <h6>Pine Grove Furnace State Park</h6>
             <p>Serving as the "Gateway to the Appalachian Trail," this park offers hiking, picnicking, and swimming opportunities, along with historic features and natural beauty. [6]</p>
-            <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/PineGroveFurnaceStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/PineGroveFurnaceStatePark/Pages/default.aspx" target="blank">EXPLORE</a>
         </div>
         <div class="col33A">
             <img src="images/img9.webp" alt="Worlds End State Park">
             <h6>Worlds End State Park</h6>
             <p>Situated in the Endless Mountains, this park is known for its rugged beauty, with hiking trails, waterfalls, and breathtaking views of the Loyalsock Creek Gorge. [7]</p>
-            <a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/WorldsEndStatePark/Pages/default.aspx" target="blank"> <button><h4>EXPLORE</h4></button></a>
+            <a class="explore" a href= "https://www.dcnr.pa.gov/StateParks/FindAPark/WorldsEndStatePark/Pages/default.aspx" target="blank">EXPLORE</a>
         </div>
     </div>
     </div>
