--- a/exercises/responsive-test.html
+++ b/exercises/responsive-test.html
@@ -8,28 +8,34 @@
 h1 {
     text-align: center;
 }
+img {
+    width: 100%;
+    height: auto;
+}
 .box1 {
-    margin: auto;
+    margin: 0 auto;
     min-height: 200px;
     max-width: 1440px;
     background-color:brown;
     color: white;
     border-radius: 25px;
-    padding: 10px;
+    padding: 10em;
     }
-@media (max-width: 1440px) {
-    .box1 {min-width: 1200px;
+.box2 {
+    width: 800px;
+    background-color: blue;
+    min-height: 100px;
+
+}
+@media screen and (max-width: 1440px) {
+    .box1 {
         background-color: red;
 }
 }
-@media (max-width: 1000px) {
-    .box1 {min-width: 1000px;
-        background-color: rgb(54, 132, 86);
-}
-}
-@media (max-width: 800px) {
-    .box1 {min-width: 800px;
-        background-color: rgb(82, 33, 167);
+@media screen and (max-width: 1440px) {
+    .box2 {
+        width: 100%;
+        background-color: rgb(24, 117, 154);
 }
 }
 </style>
@@ -40,6 +46,7 @@ h1 {
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer feugiat massa at nunc varius hendrerit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque id lorem sit amet magna faucibus sodales. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dui dolor, dictum in varius sit amet, porttitor in orci. Fusce mattis tortor orci, quis bibendum magna pulvinar id. Cras pulvinar vestibulum sapien, sed vehicula risus condimentum id. Sed posuere dignissim sapien sit amet commodo. Sed ac imperdiet leo. Aliquam id faucibus sapien. Curabitur ultrices turpis ut velit imperdiet rhoncus. Fusce ac justo sit amet mi interdum tincidunt. Integer quis ante felis. Nullam imperdiet, ex nec sollicitudin ultricies, mi lorem commodo orci, vel dapibus odio turpis pharetra ligula. Proin sem lectus, semper id odio vitae, finibus porttitor felis.
         </p>
+    <div class="box2"></div>
     </div>
 </body>
 </html>
