--- a/projects/instructional/template.html
+++ b/projects/instructional/template.html
@@ -50,7 +50,6 @@ main {
 .col33 {
     width: 33%;
     height: auto;
-    vertical-align: center;
 }
 h1 {
     font-size: 55px;
@@ -145,6 +144,7 @@ p {
         </div>
         <div class="col33">
             <p>Next: Step x</p>
+            <img src="https://placehold.co/75x75" alt="placeholder">
         </div>
     </div>
 </main>
