--- a/projects/instructional/template.html
+++ b/projects/instructional/template.html
@@ -41,15 +41,16 @@ main {
     height: auto;
     margin: auto;
     display: flex;
-    background-color: rgb(138, 29, 82);
 }
 .col67 {
     width: 67%;
     height: auto;
+    background-color: aqua;
 }
 .col33 {
     width: 33%;
     height: auto;
+    background-color: aquamarine;
 }
 h1 {
     font-size: 55px;
