--- a/projects/instructional/final/home.html
+++ b/projects/instructional/final/home.html
@@ -71,6 +71,19 @@ h2 {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+h3 {
+    font-size: 24px;
+    font-family: "League Spartan", sans-serif;
+    color: #ffffff;
+    font-weight: 900;
+    position: absolute;
+}
+.steptext {
+    position: relative;
+    display: flex;
+    justify-content: right;
+    margin-right: 5%;
+}
 p {
   font-family: "Inria Sans", sans-serif;
   font-weight: 400;
@@ -109,6 +122,18 @@ p {
     width: 90px;
     height: 75px;
 }
+.home-button {
+    border: none;
+    cursor: pointer;
+    appearance: none;
+    background-color: inherit;
+    width: 150px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: 10px;
+    position: absolute;
+}
+
 @media (max-width: 1005px) {
     #primary-nav {
         display: grid;
@@ -125,6 +150,10 @@ p {
     display: block;
     position: absolute;
     font-size: 40px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    color: #ffffff;
     }
     #primary-nav a {
     color:white;
@@ -163,12 +192,18 @@ p {
     height: 75px;
     background-color: #4C4040;
     }
+    .steptext {
+    display: none;
+    }
 }
 </style>
 </head>
 <body id="home">
-    <div class="navbar"></div>
-    <button id="toggle-nav"><img id="ellipsis" src="images/ellipsis.svg" alt="ellipsis"></button>
+    <div class="navbar">
+        <button class="home-button"><img src="../images/home-icon_instr_new.svg" alt="home"></button>
+        <div class="steptext"><h3>Steps</h3></div>
+    </div>
+    <button id="toggle-nav">&#8230;</button>
     <nav id="primary-nav" role="navigation">
         <div class="inner">
             <ul id="mynav">
@@ -195,28 +230,28 @@ p {
         </div>
         <div class="col33">
             <div class="stepbutton">
-                <p class="nextsteptext">Next: Step x</p>
-                <img class="nextstep" src="https://placehold.co/75x75" alt="placeholder">
+                <button class="next-button"><img src="arrow-right.svg" alt="next-button"></button>
             </div>
         </div>
     </div>
 </main>
 <script>
     window.onload = () => {
-    // Reference button by ID
-    const toggleNav = document.getElementById("toggle-nav");
-    const icon = document.getElementById("icon");
-
-    // Tell button to do something on click
-    toggleNav.addEventListener("click", () => {
-      // toggle the body's class attribute
-      document.body.classList.toggle("nav-open");
-
-      icon.src = document.body.classList.contains("nav-open")
-        ? "&#x2715"
-        : "ellipsis.svg";
-    });
-  };
-</script>
+      // Reference button by ID
+      const toggleNav = document.getElementById("toggle-nav");
+      toggleNav.innerHTML = "&#8230;";
+      const icon = document.getElementById("icon");
+  
+      // Tell button to do something on click
+      toggleNav.addEventListener("click", () => {
+        // Toggle the body's class attribute
+        document.body.classList.toggle("nav-open");
+        // Change icon based on nav state
+        icon.innerHTML = document.body.classList.contains("nav-open")
+          ? "&#x2715;"
+          : "&#8230;";
+      });
+    };
+  </script>
 </body>
 </html>
